--- a/frontEnd/src/styles/MyBookings.css
+++ b/frontEnd/src/styles/MyBookings.css
@@ -6,33 +6,26 @@
     text-align: center;
     overflow-y: auto;  /* allows scrolling when window is short */
     padding: 20px;     /* some breathing space */
-  
+    /* background: #f8f9fa; */
 }
-/* .booking-box2{
-  
-  align-items: center;
-  background: #fff;
-  border-radius: 2em;
-  padding: 2em 2em;
-  box-shadow: 0 4px 16px rgba(0, 0, 0, 0.1);
-} */
+
 .mybooking-container {
-    max-width: 900px;
+    max-width: 80%;
     margin: auto;
   }
   .bookings-grid {
-    display: flex;
-    justify-content: space-around;
-    align-items: center;
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
     gap: 2em;
     margin-top: 1.5em;
+    justify-items: center; /* centers cards in their cells */
   }
+  
   
   .booking-info {
     background: #fff;
-    padding: 1.5em;
+    padding: 1em;
     border-radius: 12px;
-    box-shadow: 0 2px 8px rgba(0,0,0,0.1);
     text-align: left;
   }
   
@@ -40,12 +33,27 @@
   .booking-card {
     background: white;
     padding: 20px;
-    box-shadow: rgba(0, 0, 0, 0.1) 0 4px 12px;
     border-radius: 12px;
+    width: 100%;         /* all cards same width */
+    height: 55vh;        /* all cards same height */
+    /* display: flex;
+    flex-direction: column;
+    justify-content: space-between; */
+    overflow: auto;
+    box-shadow: 0 4px 8px rgba(0,0,0,0.1);
   }
+ 
   .mybooking-img img{
-    width: 30%;
-    height: 20vh;
+    border-radius: 3%;
+    border: 1px solid #fff;
+    width: 100%;
+    height: 180px;        /* fixed image height */
+    object-fit: cover;
+  }
+  .booking-btns{
+    padding: 1em ;
+    display: flex;
+    justify-content: space-between;
   }
   .cancel-btn {
     margin-top: 10px;
